@@ -134,7 +134,7 @@ public class MethodAspect0 {
                     objectFileWriter.write(invocationString + INVOCATION_COUNT);
                     objectFileWriter.close();
                 } else {
-                    String content = Files.readString(Paths.get(invocationCountFilePath));
+                    String content = new String(Files.readAllBytes(Paths.get(invocationCountFilePath)));
                     Pattern pattern = Pattern.compile(invocationString + "(\\d+$)");
                     Matcher matcher = pattern.matcher(content);
                     if (matcher.find()) {
@@ -191,6 +191,8 @@ public class MethodAspect0 {
                 profileSizePre = getObjectProfileSize();
                 writeObjectXMLToFile(receivingObject, receivingObjectFilePath);
                 writeObjectXMLToFile(parameterObjects, paramObjectsFilePath);
+            } else {
+                logger.error("file size limit reached");
             }
             MessageSupplier messageSupplier = MessageSupplier.create(
                     "className: {}, methodName: {}",
